Overlay mobile view aligned. Changed the overlay text color to white. Fixed pixelated images

--- a/css/text-overlay.css
+++ b/css/text-overlay.css
@@ -1,17 +1,7 @@
-.container {
-  position: relative;
-}
 
 .text-block {
-  position: absolute;
-  bottom: 80px;
-  right: 80px;
-  left: 50%;
+  position: relative;
+  padding: 10px 0;
   background-color: rgba(105, 105, 105, 0.7);
-  color: black;
-  padding-top: 10px;
-  padding-bottom: 5px;
-  margin-bottom: -20px;
-  margin-right: -43%;
-  transform: translate(-50%, -50%)
-}
+
+  }
